# rk_ctb

./: CMakeLists.txt  README.md
c++/: CMakeLists.txt
c++/device/: build.sh  ctb_device.cpp  ctb_device_demo.cpp
c++/host/: build.sh  test  test_unique_device2.cpp
c++/utils/: slog.cpp  slog.h
device/: build.sh  ctb_device.cpp  ctb_device.h  ctb_device_demo.cpp
host/: build.sh  test_unique_device2.cpp
models/ssd/: box_priors_coco_resnet_fpn.txt
python/device/: log.py  main.py  utils.py
python/device/mobilenet-ssd/: main.py  rknn_server_class.py  ssd.py  ssd_bak.py  ssd_server.py  utils.py
python/device/yolov3/: log.py  rknn_server_class.py  yolov3_server.py
